--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-html, body {
+html{
+  min-height: 100%;
+}
+
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
